SERVER-62229 Allow applying index build abort entry when in recoverFromOplogAsStandalone mode

(cherry picked from commit bb6c77de8123856e9eb6bcc4f47479d9e37ddbd7)